Make the correction button smaller

--- a/www/css/peoplefinder_default.css
+++ b/www/css/peoplefinder_default.css
@@ -56,7 +56,7 @@ body #footer .footer_col {
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#DD1616), color-stop(100%,#AC0302));
 	color:#fff;
 	text-shadow: 1px 1px 1px #6e0000;
-	font-size: 0.8em;
+	font-size: 0.7em;
 	font-weight:bold;
 }
 #maincontent .vcardInfo a.dir_correctionRequest {
